fixed the change cover to align with the side buttons

--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -53,6 +53,22 @@ $cover-camera-height: 20px;
 	background-color: rgba(0,0,0,0.5);
 	transition: opacity 0.2s;
 
+	&.cover
+	{
+		z-index: 100;
+		top: 10px;
+		right: 0;
+		border: 1px solid white;
+		padding: 5px 15px;
+
+		img
+		{
+			width: $cover-camera-height;
+			height: $cover-camera-height;
+			vertical-align: top;
+			margin-right: 10px;
+		}
+	}
 	.camera-profile
 	{
 		opacity: 0.75;
@@ -90,23 +106,6 @@ $cover-camera-height: 20px;
 	/* background-size: 100%;
 	background-position: 20% 40%;
 	-webkit-filter: blur(0px) brightness(0.5); */
-
-	.profile-overlay.cover
-	{
-		z-index: 100;
-		top: 10px;
-		right: 10px;
-		border: 1px solid white;
-		padding: 5px 15px;
-
-		img
-		{
-			width: $cover-camera-height;
-			height: $cover-camera-height;
-			vertical-align: top;
-			margin-right: 10px;
-		}
-	}
 
 }
 
